[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my-elements-client"
version = "0.1.0"
description = "A client application that uses pySympElements to interact with the Elements API"
authors = [
    {name = "Daniel Kerchner", email = "kerchner@gwu.edu"},
]
dependencies = [
    "pysymp-elements @ git+https://github.com/gwu-libraries/pysymp-elements.git",
    # for development:  "pysymp-elements @ file:///Users/kerchner/projects/pySympElements",
    # Add any other dependencies your client needs
#    "click>=8.0.0",  # Example: for CLI interface
    "dotenv",  # Example: for loading environment variables
]
requires-python = ">=3.8"
license = "MIT"

[tool.setuptools]
packages = []

[project.urls]
Homepage = "https://github.com/gwu-libraries/pySympElements-GWClient"
Repository = "https://github.com/gwu-libraries/pySympElements-GWClient.git"

# Optional: Development dependencies
[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black",
    "flake8",
]